--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="OpenTechSummit 2014 : 26/27 Nov. 2014 Berlin" />
+    <meta name="description" content="OpenTechSummit 2014 : 27/28 Nov. 2014 Berlin" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/OpenTechSummit">View on GitHub</a>
 
           <h1 id="project_title">OpenTechSummit 2014</h1>
-          <h2 id="project_tagline">26/27 Nov. 2014 Berlin</h2>
+          <h2 id="project_tagline">27/28 Nov. 2014 Berlin</h2>
 
         </header>
     </div>
@@ -28,9 +28,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-opentechsummit-2014" class="anchor" href="#welcome-to-opentechsummit-2014"><span class="octicon octicon-link"></span></a>Welcome to OpenTechSummit 2014</h3>
+<a name="welcome-to-opentechsummit" class="anchor" href="#welcome-to-opentechsummit"><span class="octicon octicon-link"></span></a>Welcome to OpenTechSummit</h3>
 
-<p>OpenTechSummit Website</p>
+<p>Community Network and Open Tech Summit in Berlin on November 27/28, 2014<br><a href="http://www.opentechsummit.net">www.opentechsummit.net</a><br><a href="mailto:contact@opentechsummit.net">contact@opentechsummit.net</a></p>
       </section>
     </div>
 
