Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,47 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="OpenTechSummit 2014 : 27/28 Nov. 2014 Berlin" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>OpenTechSummit 2015 by OpenTechSummit</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>OpenTechSummit 2014</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">OpenTechSummit 2015</h1>
+        <p class="header">2015 Berlin</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/OpenTechSummit">View on GitHub</a>
 
-          <h1 id="project_title">OpenTechSummit 2014</h1>
-          <h2 id="project_tagline">27/28 Nov. 2014 Berlin</h2>
 
-        </header>
-    </div>
+        <ul>
+          <li><a class="buttons github" href="https://github.com/OpenTechSummit">GitHub Profile</a></li>
+        </ul>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a name="welcome-to-opentechsummit" class="anchor" href="#welcome-to-opentechsummit"><span class="octicon octicon-link"></span></a>Welcome to OpenTechSummit</h3>
 
-<p>Community Network and Open Tech Summit in Berlin on November 27/28, 2014<br><a href="http://www.opentechsummit.net">www.opentechsummit.net</a><br><a href="mailto:contact@opentechsummit.net">contact@opentechsummit.net</a></p>
+<p>The OpenTechSummit 2015 will take in May in Berlin, Germany.<br>
+<a href="http://www.opentechsummit.net">www.opentechsummit.net</a><br>
+<a href="mailto:contact@opentechsummit.net">contact@opentechsummit.net</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
