Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>OpenTechSummit 2015 by OpenTechSummit</title>
+    <title>OpenTechSummit by OpenTechSummit</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,14 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">OpenTechSummit 2015</h1>
-        <p class="header">2015 Berlin</p>
+        <h1>OpenTechSummit</h1>
+        <p>2015 Berlin</p>
 
 
-
-        <ul>
-          <li><a class="buttons github" href="https://github.com/OpenTechSummit">GitHub Profile</a></li>
-        </ul>
+        <p class="view"><a href="https://github.com/OpenTechSummit">View My GitHub Profile</a></p>
 
       </header>
       <section>
@@ -35,10 +31,10 @@
 <a href="mailto:contact@opentechsummit.net">contact@opentechsummit.net</a></p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
