Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>
 <a name="welcome-to-opentechsummit" class="anchor" href="#welcome-to-opentechsummit"><span class="octicon octicon-link"></span></a>Welcome to OpenTechSummit</h3>
 
-<p>The OpenTechSummit 2015 will take in May in Berlin, Germany.<br>
+<p>The OpenTechSummit 2015 will take place in May in Berlin, Germany.<br>
 <a href="http://www.opentechsummit.net">www.opentechsummit.net</a><br>
 <a href="mailto:contact@opentechsummit.net">contact@opentechsummit.net</a></p>
       </section>
