--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 									<img class="background-image" alt="Mario Behling" src="img/mariobehling.jpg">
 									<div class="hover-state text-center preserve3d">
 										<div class="social-links vertical-align">
-											<a href="#ort"><i class="icon social_twitter"></i></a>
-											<a href="#ort"><i class="icon social_linkedin"></i></a>
+											<a href="https://twitter.com/mariobehling" target="default"><i class="icon social_twitter"></i></a>
+											<a href="https://www.linkedin.com/in/mariobehling" target="default"><i class="icon social_linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -206,8 +206,8 @@
 									<img class="background-image" alt="Iris Wessolowski" src="img/IrisWessolowski.jpg">
 									<div class="hover-state text-center preserve3d">
 										<div class="social-links vertical-align">
-											<a href="#ort"><i class="icon social_twitter"></i></a>
-											<a href="#ort"><i class="icon social_linkedin"></i></a>
+											<a href="https://twitter.com/iwess1" target="default"><i class="icon social_twitter"></i></a>
+											<a href="http://de.linkedin.com/pub/iris-wessolowski/5b/564/325/en" target="default"><i class="icon social_linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -222,8 +222,8 @@
 									<img class="background-image" alt="Speaker" src="img/andrerebentisch.png">
 									<div class="hover-state text-center preserve3d">
 										<div class="social-links vertical-align">
-											<a href="#ort"><i class="icon social_twitter"></i></a>
-											<a href="#ort"><i class="icon social_linkedin"></i></a>
+											<a href="https://twitter.com/agonarch" target="default"><i class="icon social_twitter"></i></a>
+											<a href="http://de.linkedin.com/in/arebentisch" target="default"><i class="icon social_linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -238,13 +238,13 @@
 									<img class="background-image" alt="Speaker" src="img/MonicMeisel.jpg">
 									<div class="hover-state text-center preserve3d">
 										<div class="social-links vertical-align">
-											<a href="#ort"><i class="icon social_twitter"></i></a>
-											<a href="#ort"><i class="icon social_linkedin"></i></a>
+											<a href="https://twitter.com/monic2001" target="default"><i class="icon social_twitter"></i></a>
+											<a href="http://de.linkedin.com/pub/monic-meisel/b/8b5/17" target="default"><i class="icon social_linkedin"></i></a>
 										</div>
 									</div>
 								</div>
 								<span class="speaker-name">Monic Meisel</span>
-								<span>Freifunk</span>
+								<span>Freifunk.net</span>
 							</div>
 						</div>
 					</div>
@@ -587,7 +587,7 @@
 				
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<span>Sponsor werden? <a href="mailto:contact@opentechsummit.net" target="default">Kontakt</a></span>
+							<span>Sponsor werden.&nbsp;<a href="mailto:contact@opentechsummit.net" target="default">Kontakt</a></span>
 						</div>
 					</div>
 				</div>
