--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Meetup</title>
+        <title>OpenTechSummit Berlin 2015 | Linuxtag Ersatz ;-)</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -342,9 +342,9 @@
 						</li>
 						
 						<li>
-							<a href="img/14909747534_d77eacc796_k.jpg" class="ven" data-lightbox="true" data-title="Lightbox Image">
+							<a href="img/15797603110_0c4a92caa9_k.jpg" class="ven" data-lightbox="true" data-title="Lightbox Image">
 								<div class="background-image-holder">
-									<img class="background-image" alt="Lightbox Image" src="img/14909747534_d77eacc796_k.jpg">
+									<img class="background-image" alt="Lightbox Image" src="img/15797603110_0c4a92caa9_k.jpg">
 								</div>
 							</a>
 						</li>
