--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit 'Call for Speakers' 2015?&nbsp;<div><a href="speaker-registration" target="default">Registrierung</a></div></h1>
+								<h1 class="text-white">OpenTechSummit 'Call for Speakers' 2015?&nbsp;<div><a href="http://opentechsummit.net/speaker-registration/" target="default">Registrierung</a></div></h1>
 							</div>
 						</div>
 					</div>
