--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 								<li>
 									<div class="schedule-title">
 										<span class="time">10:00 - 17:00</span>
-										<span class="title">Vortraege und Praesentationen</span>
+										<span class="title">Vorträge und Präsentationen</span>
 									</div>
 									
 									<div class="schedule-text">
@@ -625,7 +625,7 @@
 							<div class="tweets-feed" data-widget-id="554383530084823040">
 							
 							</div>
-							<span class="text-white">Follow <a href="#ort">@o</a>pntec for more updates</span>
+							<span class="text-white">Follow us! Updates&nbsp;<a href="#ort">@o</a>pntec&nbsp;</span>
 						</div>
 					</div>
 				</div>
