--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>OpenTechSummit Berlin 2015 | Open Technology Linuxtag and Maker Community</title>
+        <title>OpenTechSummit Berlin 2015 | Open Technology, Open Knowledge, Linux, Maker Community</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
