--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
 									<img alt="Venue" src="img/15364928949_e82d973f0c_k.jpg">
-									<h3>Technologie und Gesellschaft</h3>
+									<h3>Technologie, Gesellschaft, Startups</h3>
 									
 												
 								</div>
