--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit 'Call for Speakers' 2015&nbsp;<div><a href="http://opentechsummit.net/speaker-registration/" target="default">Registrierung</a></div></h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="CallSpeakers.pdf" target="default">Call for Speakers</a><div><br></div></h1><h1 class="text-white">Einreichungen bis 15. Mai: <a href="http://opentechsummit.net/speaker-registration" target="default">Registrierung</a></h1>
 							</div>
 						</div>
 					</div>
@@ -677,4 +677,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
-							
+									
