--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
 						<div class="row">
 							<div class="text-center col-sm-12">
 								<h1>Cooler Event. Lust zum Mitmachen!</h1>
-								<span class="uppercase">Mach mit als Freiwilligerer und lerne tolle Leute Kennen</span>
+								<span class="uppercase">Mach mit als Freiwilliger und lerne tolle Menschen Kennen</span>
 								<a class="btn btn-lg" href="http://opentechsummit.net/volunteers" target="default">Als Volunteer<br>registrieren</a>
-								<span class="uppercase">Oh, und lade deine Freunde ein</span>
+								<span class="uppercase">und lade deine Freunde ein</span>
 								<a href="https://www.facebook.com/OpenTechSummit" target="default"><i class="icon social_facebook"></i></a>
 								<a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a>
 							</div>
