--- a/impressum.html
+++ b/impressum.html
@@ -46,7 +46,14 @@
 									
 							
 									<div class="text-center col-sm-11">
-										<span class="text-white"><p>Dieses Impressum gilt auch für die Facebookseite</p>
+										<span class="text-white"><p>OpenTechSummit Arbeitsgruppe<br>
+										FFII e.V. FashionTec Working Group<br>
+										Malmöer Str. 610439 Berlin<br>
+										Phone: +49 30 41722597<br>
+										Fax: +49 721 509663769<br>
+										E-Mail: office at ffii.org<br><br>
+
+										Dieses Impressum gilt auch für die Facebookseite</p>
 
 			<p>Verantwortlich für die Inhalte einzelner Artikel sind die zeichnenden Autoren. Wir übernehmen keine Verantwortung oder Haftung für die Inhalte externer Websites. Wir setzen sowohl den gesunden Menschenverstand als auch die Fähigkeit zur Kommunikation bei unseren Leserinnen und Lesern voraus. Wir bemühen uns, soweit möglich, zum Zeitpunkt der Verlinkung sämtliche Links auf ihre juristische Unbedenklichkeit zu prüfen. Sollten Änderungen bei diesen Links eingetreten sein, die Rechte Dritter verletzen oder gegen geltende Gesetze verstoßen, werden diese Links nach Kenntnisnahme entfernt.</p>
 
