--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
 							<ul class="contact-methods">
 								<li><i class="icon pe-7s-mail"></i><span>contact@opentechsummit.net</span></li>
 								<li><i class="icon pe-7s-phone"></i><span>+49 30 41722597</span></li>
-								<li><i class="icon pe-7s-map-marker"></i><span>FFII e.V. Berliner Geschäftsstelle<br>Malmöer Str. 6, 10439 Berlin</span></li>
+								<li><i class="icon pe-7s-map-marker"></i><span>FFII e.V. Berliner Geschäftsstelle,&nbsp;Malmöer Str. 6, 10439 Berlin</span></li>
 							</ul>
 						</div>
 					</div>
