--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
     </head>
 
+ 
     <body>
     
     	<div class="loader">
@@ -793,7 +794,7 @@
 							<ul class="menu">
 								<li><a href="#press" class="inner-link" target="default">Press</a>e</li>
 								<li><a href="impressum.html" target="_blank">Impressum</a></li>
-								<li><a href="http://opentechsummit.eventbrite.net" target="default">Tickets</a></li>
+								<li><a href="http://opentechsummit.eventbrite.com" target="default">Tickets</a></li>
 								
 								<li><a class="inner-link back-to-top" href="#top">Back To Top</a></li>
 							</ul>
