--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 				</div>
 			
 				<div class="map-holder col-md-6 col-sm-4">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19419.46926923073!2d13.393014314765908!3d52.525587615341784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e373f035901%3A0x42120465b5e3b70!2sBerlin!5e0!3m2!1sde!2sde!4v1421019556813"></iframe>
+					<iframe src="http://www.openstreetmap.org/way/105733789#map=17/52.52415/13.38989"></iframe>
 				</div>
 			</section>
 		</div>
@@ -794,7 +794,7 @@
 							<ul class="menu">
 								<li><a href="#press" class="inner-link" target="default">Press</a>e</li>
 								<li><a href="impressum.html" target="_blank">Impressum</a></li>
-								<li><a href="http://opentechsummit.eventbrite.com" target="default">Tickets</a></li>
+								<li><a href="http://opentechsummit.eventbrite.net" target="default">Tickets</a></li>
 								
 								<li><a class="inner-link back-to-top" href="#top">Back To Top</a></li>
 							</ul>
