--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 				</div>
 			
 				<div class="map-holder col-md-6 col-sm-4">
-					<iframe src="http://www.openstreetmap.org/way/105733789#map=17/52.52415/13.38989"></iframe>
+					<iframe src="https://www.google.com.sg/maps/place/Kalkscheune/@52.52433,13.389795,17z/data=!3m1!4b1!4m2!3m1!1s0x47a851e837c93643:0xd44c06c0d6ff5dda"></iframe>
 				</div>
 			</section>
 		</div>
