--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 				</div>
 			
 				<div class="map-holder col-md-6 col-sm-4">
-					<iframe src="https://www.google.com.sg/maps/place/Kalkscheune/@52.52433,13.389795,17z/data=!3m1!4b1!4m2!3m1!1s0x47a851e837c93643:0xd44c06c0d6ff5dda"></iframe>
+					<iframe src="http://www.openstreetmap.org/export/embed.html?bbox=13.385767936706541%2C52.522194393613276%2C13.393964767456055%2C52.52622198738677&amp;layer=mapnik&amp;marker=52.5242049728089%2C13.389866352081299"></iframe>
 				</div>
 			</section>
 		</div>
