--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
     </head>
 
-
     <body>
     
     	<div class="loader">
@@ -190,7 +189,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="CallSpeakers.pdf" target="default">Call for Speakers</a><div><br></div></h1><h1 class="text-white">Einreichungen bis 15. März: <a href="http://opentechsummit.net/speaker-registration" target="default">Registrierung</a></h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="CallSpeakers.pdf" target="default">Call for Speakers</a><div><br></div></h1><h1 class="text-white">Einreichungen hier: <a href="http://opentechsummit.net/speaker-registration" target="default">Registrierung</a></h1>
 							</div>
 						</div>
 					</div>
