--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 								<div class="speaker-description">
 									<h2>Luca Comparini</h2>
 									<span class="sub">Ecosystem Development at IBM</span>
-									<p>Luca Comparini's Karriere begann als DNS-Administrator bei Fastweb. 2007 holte ihn IBM als Evangelisten für IT-Infrastruktur-Technologien: Power Systems, Virtualisierung, Automatisierung und IaaS Cloud-deployment. Seit 2014 unterstützt er die Einführung von Linux-basierten Ökosystemen für unabhängige Partner für IBM Power Systems.</p>
+									<p>Luca Comparini's Karriere begann als DNS-Administrator bei Fastweb. 2007 holte ihn IBM als Evangelisten für IT-Infrastruktur-Technologien zu sich. Seit 2014 unterstützt er unabhängige Partner bei der Einführung von Linux-basierten Lösungen: Power Systems, Virtualisierung, Automatisierung und IaaS Cloud-Deployment.</p>
 								</div>
 							</div>
 						</div>
@@ -377,26 +377,6 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Bernd Erk" src="img/bernderk.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/icinga"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://de.linkedin.com/in/bernderk"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Bernd Erk</h2>
-									<span class="sub">CEO Netways</span>
-									<p>Bernd ist Geschäftsführer der NETWAYS Gruppe. Er hat Erfahrung mit mit Java und Oracle-Datenbanken gearbeitet hat und kümmert er sich um das Thema Reporting bei NETWAYS und Icinga.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
 										<img class="background-image" alt="Stefan Koehler" src="img/stefankoehler.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -417,20 +397,20 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Ludovic Dubost" src="img/LudovicDubost.jpg">
+										<img class="background-image" alt="Bernd Erk" src="img/bernderk.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/ldubost"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://https//fr.linkedin.com/in/ldubost"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/icinga"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://de.linkedin.com/in/bernderk"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Ludovic Dubost<br></h2>
-									<span class="sub">CEO xWiki</span>
-									<p>Ludovic is der Gründer und CEO der XWiki SAS. Er begann seine Karriere als Softwarearchitekt bei Netscape und wurde später CTO bei NetValue. 2004 launchte er XWiki als Business- und Enterprise-Lösung.</p>
+									<h2>Bernd Erk</h2>
+									<span class="sub">CEO Netways</span>
+									<p>Bernd ist Geschäftsführer der NETWAYS Gruppe. Er hat Erfahrung mit mit Java und Oracle-Datenbanken gearbeitet hat und kümmert er sich um das Thema Reporting bei NETWAYS und Icinga.</p>
 								</div>
 							</div>
 						</div>
@@ -453,6 +433,26 @@
 									<h2>Wan Leung Wong</h2>
 									<span class="sub">Tinyboy 3D-Drucker</span>
 									<p>Wan Leung Wang ist Entwickler des Tinyboy 3D-Kits, einer kostengünstige 3D-Druck-Lösung für Studenten zum Selberbauen. Er ist Gründungsmitglied der Hong Kong Creative Open Technology Association (HKCOTA), die sich für offene Standards, freie Software, Hardware und Kultur einsetzt.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Ludovic Dubost" src="img/LudovicDubost.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/ldubost"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://https//fr.linkedin.com/in/ldubost"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Ludovic Dubost<br></h2>
+									<span class="sub">CEO xWiki</span>
+									<p>Ludovic is der Gründer und CEO der XWiki SAS. Er begann seine Karriere als Softwarearchitekt bei Netscape und wurde später CTO bei NetValue. 2004 launchte er XWiki als Business- und Enterprise-Lösung.</p>
 								</div>
 							</div>
 						</div></div>
