--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015</title>
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -370,7 +371,7 @@
 								<div class="speaker-description">
 									<h2>Andreas Bräu</h2>
 									<span class="sub">Strickmaschinen-Hacker</span>
-									<p><div><div><div><div><div><div>"Seit ca. einem Jahr stricke ich auch&nbsp;</div><div>:-)" Andi ist Softwareentwickler, engagiert sich bei Freifunk und für Open Hardware. Er beschäftigt sich mit Strickmaschinen, die mit Hilfe von Shields vom AYAB-Projekt und Arduinos upgegradet werden und nach und nach mehr Funktionen bekommen und mit Industriemaschinen Schritt halten.</div></div></div></div></div></div></p>
+									<p>"Seit einem Jahr stricke ich auch&nbsp;:-)" Andi ist Softwareentwickler, engagiert sich bei Freifunk und für Open Hardware. Er beschäftigt sich mit Strickmaschinen, die mit Hilfe von Shields vom AYAB-Projekt und Arduinos upgegradet werden und nach und nach mit mehr Funktionen ausgestattet werden.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -391,6 +392,26 @@
 									<h2>Stefan Koehler</h2>
 									<span class="sub">Limux-Projekt München</span>
 									<p>Stefan arbeitet als Software-Consultant bei Projekten wie dem Limux-Projekt der Stadt München. Er interessiert sich zudem für Mozart und Open Hardware-Projekte für Kinder, sowie die Shanzai-Produktion in China.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Ludovic Dubost" src="img/LudovicDubost.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/ldubost"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://https//fr.linkedin.com/in/ldubost"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Ludovic Dubost<br></h2>
+									<span class="sub">CEO xWiki</span>
+									<p>Ludovic is der Gründer und CEO der XWiki SAS. Er begann seine Karriere als Softwarearchitekt bei Netscape und wurde später CTO bei NetValue. 2004 launchte er XWiki als Business- und Enterprise-Lösung.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -439,20 +460,40 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Ludovic Dubost" src="img/LudovicDubost.jpg">
+										<img class="background-image" alt="André Gaul" src="img/andregaul.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/ldubost"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://https//fr.linkedin.com/in/ldubost"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/andrenarchy"><i class="icon social_twitter"></i></a>
+												
 											</div>
 										</div>
 									</div>
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Ludovic Dubost<br></h2>
-									<span class="sub">CEO xWiki</span>
-									<p>Ludovic is der Gründer und CEO der XWiki SAS. Er begann seine Karriere als Softwarearchitekt bei Netscape und wurde später CTO bei NetValue. 2004 launchte er XWiki als Business- und Enterprise-Lösung.</p>
+									<h2>André Gaul<br></h2>
+									<span class="sub">Freifunk</span>
+									<p>André is a community network enthusiast and contributes to Berlin's Freifunk network. After studying mathematics and computer science, he obtained his PhD in mathematics in 2014. Apart from Freifunk, André currently builds tools for advancing open access in academia.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Frank Hofmann" src="img/frankhofmann.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/hofmannedv"><i class="icon social_twitter"></i></a>
+												
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Frank Hofmann<br></h2>
+									<span class="sub">lug.berlin</span>
+									<p>Frank ist Mitgründer des Open-Source Experten-Netzwerk Büro 2.0 in Berlin und arbeitet hier als Dienstleister mit Spezialisierung auf Druck und Satz. Er ist Autor für das Linux-Magazin und das Magazin LinuxUser. Er ist Hauptkoordinator der Treffen der lug.berlin.</p>
 								</div>
 							</div>
 						</div></div>
