--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
 												<a target="default" href="https://twitter.com/ldubost"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://https//fr.linkedin.com/in/ldubost"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="http://fr.linkedin.com/in/ldubost"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
@@ -412,6 +412,46 @@
 									<h2>Ludovic Dubost<br></h2>
 									<span class="sub">CEO xWiki</span>
 									<p>Ludovic is der Gründer und CEO der XWiki SAS. Er begann seine Karriere als Softwarearchitekt bei Netscape und wurde später CTO bei NetValue. 2004 launchte er XWiki als Business- und Enterprise-Lösung.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Juergen Neumann" src="img/JuergenNeumann.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/freifunk"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://de.linkedin.com/pub/juergen-neumann/2/146/7"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Juergen Neumann<br></h2>
+									<span class="sub">Gründer Freifunk</span>
+									<p>Jürgen studierte Feinwerk- und elektronische Gerätetechnik an der TFH Berlin. Als IT-Spezialist hat er seit 1990 für zahlreiche kommerzielle und nicht-kommerzielle Projekte gearbeitet. Er ist Gründungsmitglied des Fördervereins freie Netzwerke e.V. und Mit-Initiator von freifunk.net.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Wan Leung Wong" src="img/wanleungwong.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/wanleung"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://hk.linkedin.com/in/wanleung"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Wan Leung Wong</h2>
+									<span class="sub">Tinyboy 3D-Drucker</span>
+									<p>Wan Leung Wang ist Entwickler des Tinyboy 3D-Kits, einer kostengünstigen 3D-Druck-Lösung für Studenten zum Selberbauen. Er ist Gründungsmitglied der Hong Kong Creative Open Technology Association (HKCOTA), die sich für offene Standards, freie Software, Hardware und Kultur einsetzt.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -431,32 +471,12 @@
 								<div class="speaker-description">
 									<h2>Bernd Erk</h2>
 									<span class="sub">CEO Netways</span>
-									<p>Bernd ist Geschäftsführer der NETWAYS Gruppe. Er hat Erfahrung mit mit Java und Oracle-Datenbanken gearbeitet hat und kümmert er sich um das Thema Reporting bei NETWAYS und Icinga.</p>
+									<p>Bernd ist Geschäftsführer der NETWAYS Gruppe. Er hat Erfahrung mit Java und Oracle-Datenbanken und kümmert er sich um das Thema Reporting bei NETWAYS und der Open Source-Monitoring-Lösung Icinga.</p>
 								</div>
 							</div>
 						</div>
 				
 					<div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Wan Leung Wong" src="img/wanleungwong.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/wanleung"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://hk.linkedin.com/in/wanleung"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Wan Leung Wong</h2>
-									<span class="sub">Tinyboy 3D-Drucker</span>
-									<p>Wan Leung Wang ist Entwickler des Tinyboy 3D-Kits, einer kostengünstige 3D-Druck-Lösung für Studenten zum Selberbauen. Er ist Gründungsmitglied der Hong Kong Creative Open Technology Association (HKCOTA), die sich für offene Standards, freie Software, Hardware und Kultur einsetzt.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
@@ -493,7 +513,27 @@
 								<div class="speaker-description">
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
-									<p>Frank ist Mitgründer des Open-Source Experten-Netzwerk Büro 2.0 in Berlin und arbeitet hier als Dienstleister mit Spezialisierung auf Druck und Satz. Er ist Autor für das Linux-Magazin und das Magazin LinuxUser. Er ist Hauptkoordinator der Treffen der lug.berlin.</p>
+									<p>Frank ist Mitgründer des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet hier als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor&nbsp;<span>schreibt er&nbsp;</span>für das&nbsp;Linux-Magazin und das Magazin LinuxUser. Er ist Hauptkoordinator der Treffen der lug.berlin.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Yannick Haan" src="img/YannickHaan.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="http://twitter.com/Yannick_Haan"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/yannick-haan/4/462/a6"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Yannick Haan<br></h2>
+									<span class="sub">Netzpolitiker</span>
+									<p>Yannick ist Autor des Buches &nbsp;“Gesellschaft im digitalen Wandel”. Politisch engagiert er sich als Mitglied in der Netz- und Medienpolitischen Kommission beim SPD Parteivorstand und arbeitet als Wissenschaftlicher Mitarbeiter im Deutschen Bundestag.</p>
 								</div>
 							</div>
 						</div></div>
