--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Juergen Neumann<br></h2>
+									<h2>Jürgen Neumann<br></h2>
 									<span class="sub">Gründer Freifunk</span>
-									<p>Jürgen studierte Feinwerk- und elektronische Gerätetechnik an der TFH Berlin. Als IT-Spezialist hat er seit 1990 für zahlreiche kommerzielle und nicht-kommerzielle Projekte gearbeitet. Er ist Gründungsmitglied des Fördervereins freie Netzwerke e.V. und Mit-Initiator von freifunk.net.</p>
+									<p>Jürgen ist Gründungsmitglied des Fördervereins freie Netzwerke e.V. und Mit-Initiator von freifunk.net. Er hat als IT-Spezialist seit 1990 für zahlreiche kommerzielle und nicht-kommerzielle Projekte gearbeitet.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
