--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015</title>
 
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Meetup</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -553,7 +558,7 @@
 								<div class="speaker-description">
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
-									<p>Frank ist Mitgründer des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor&nbsp;<span>schreibt er&nbsp;</span>für das&nbsp;Linux-Magazin und das Magazin LinuxUser. Er ist Hauptkoordinator der Treffen der lug.berlin.</p>
+									<p>Frank ist Mitgründer des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für das Linux-Magazin und das Magazin LinuxUser. Er ist Hauptkoordinator der Treffen der lug.berlin.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
